--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +18,133 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+  background-color: rgba(23, 15, 52);
+  color:rgba(255,255,255,0.9);
+  box-sizing: border-box;
+}
+p{
+  margin:0; 
+}
+hr{
+  height:1px;
+  border:none;
+  background-color: rgba(150, 150, 150, 0.3);
+}
+.bold{
+  font-weight: bold;
+}
+h1{
+  text-align: center;
+  margin:1em auto 2em;
+  
+}
+.heading{
+  border-top:1px solid rgba(150, 150, 150, 0.3);
+  font-size:1rem;
+}
+.poolsTable{
+  width:90%;
+  border-spacing: 0;
+  margin:0 auto;
+}
+.poolsTableCards{
+  width:90%;
+  min-width: 875px;
+  border-bottom:1px solid rgba(150, 150, 150, 0.3);
+  margin:0.5em auto;
+}
+.poolsTableCards td, th{
+  text-align: center;
+  padding:0.6rem;
+  border-bottom:1px solid rgba(150, 150, 150, 0.3);
+}
+.TableDescription{
+  text-align: left;
+  color:grey;
+  margin:1em auto;
+  width:90%;
+  line-height: 1.5rem;
+}
+h3{
+  text-align: center;
+  margin:1.5em;
+}
+.il-card{
+  margin:2em auto;
+  width:90%;
+  max-width:400px;
+  border:2px solid rgba(255, 255, 255, 0.151);
+  border-radius: 1rem;
+  padding:3em 2em;
+  box-shadow: 2px 2px 1.6px rgba(255, 255, 255, 0.151);
+}
+.il-card form{
+  width:100%;
+  display:flex;
+  flex-direction: column;
+  text-align: right;
+  margin:0 auto;
+}
+.il-card label{
+  width:92%;
+  font-weight: bold;
+  font-size: 1.2rem;
+  text-align: right;
+}
+input{
+  text-align:right;
+  width:80%;
+  margin:0.5em auto 1em;
+  padding:0.5em 0.5em;
+  font-size: 2em;
+  border:none;
+  background-color: #FFFFFF66;
+  color:inherit;
+}
+input.placeholder{
+  text-align: center;
+}
+input:active, input:hover{
+  background-color: rgba(255, 255, 255, 0.151);
+}
+.periods{
+  display:flex;
+  width:90%;
+  justify-content: space-between;
+  margin:0 auto;
+}
+.periods p{
+  background-color: #FFFFFF66;
+  padding:0.2em 1.5em;
+  border-radius: 0.2em;
+  font-size:1.2rem;
+}
+.impermanent-loss{
+  width:90%;
+  margin:2em auto;
+  text-align: center;
+}
+.periods p:hover{
+  cursor: pointer;
+  background-color: rgba(255,255,255,0.2);
+}
+#isActive {
+  background-color: rgba(255, 255, 255, 0.151);
+  font-weight: bold;
+}
+a, a:visited{
+  color:inherit;
+  text-decoration: none;
+}
+a:hover{
+  background-color: rgba(23, 15, 52, 0.8);
+  color:rgba(255, 255, 255, 0.151);
+}
+.footer{
+  width:100%;
+  text-align: center;
+  margin:2em 0em 1em;
+  font-size: 0.8rem;
 }
