--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,9 @@ h1{
   border-bottom:1px solid rgba(150, 150, 150, 0.3);
   margin:0.5em auto;
 }
+.poolsTableCards:hover{
+  background-color: rgba(255,255,255,0.2);
+}
 .poolsTableCards td, th{
   text-align: center;
   padding:0.6rem;
@@ -139,8 +142,8 @@ a, a:visited{
   text-decoration: none;
 }
 a:hover{
-  background-color: rgba(23, 15, 52, 0.8);
-  color:rgba(255, 255, 255, 0.151);
+  
+  color:rgba(255, 255, 255, 0.8);
 }
 .footer{
   width:100%;
