--- a/src/App.css
+++ b/src/App.css
@@ -127,7 +127,9 @@ input:active, input:hover{
 .impermanent-loss{
   width:90%;
   margin:2em auto;
-  text-align: center;
+  text-align: right;
+  font-weight:bold;
+  font-size:1.1rem;
 }
 .periods p:hover{
   cursor: pointer;
