--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,7 @@ h3{
   font-weight: bold;
   font-size: 1.2rem;
   text-align: right;
+  color:rgba(255,255,255,0.2);
 }
 input{
   text-align:right;
@@ -155,4 +156,9 @@ a:hover{
   text-align: center;
   margin:2em 0em 1em;
   font-size: 0.8rem;
+}
+
+.loading{
+  text-align:center;
+  color:rgba(255,255,255,0.2);
 }
