--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ hr{
   font-weight: bold;
 }
 h1{
+  display:none;
   text-align: left;
   font-size:1.8em;
   font-weight: 600;
@@ -48,7 +49,7 @@ h3 {
 }
 input {
   text-align: right;
-  width: 80%;
+  width: 100%;
   margin: 0.5em auto 1em;
   padding: 0.5em 0.5em;
   font-size: 2em;
@@ -70,65 +71,57 @@ input:focus{
 .menu{
   list-style: none;
   display:flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content:center;
+  align-content: flex-start;
   font-weight: 500;
+  padding:0;
+  margin-left:0;
 }
 .menu li{
   padding:0.3em 1em;
-  margin:0 0em 0em 1em;
+  margin-right:1em;
   border-radius: 0.3em;
 }
 .menu li:hover{
   background-color: rgba(255,255,255,0.2);
-  
-  
 }
 .header{
   display:flex;
-  align-items:center;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   width:90%;
-  min-width:750px;
-  margin: 1em auto;
-
+  margin: 1em auto; 
 }
 .heading{
   border-top:1px solid rgba(150, 150, 150, 0.3);
   font-size:1.5rem;
 }
-.home{
-  min-width: 750px;
-}
-.tableContainer{
-  min-width: 665px;
-}
 .searchContainer{
   width:90%;
-  min-width:665px;
   margin:0 auto 1em;
-  
 }
 .searchHome{
-  width:40%;
-  margin:0.5em 0em 1em 60%;
+  width:50%;
+  margin:1em 0em;
   text-align: left;
-  font-size:1.2em;
+  font-size:1.1rem;
   padding:0.5em 0.7em;
   
 }
 .searchHome::placeholder{
   text-align: left;
 }
-
-.poolsTable{
+.tableContainer{
   width:90%;
-  border-spacing: 0;
   margin:0 auto;
+  min-width:650px;
+}
+.poolsTable{
+  width:100%;
+  border-collapse: collapse;
 }
 .poolsTableCards{
-  width:90%;
-  min-width: 875px;
   border-bottom:1px solid rgba(150, 150, 150, 0.3);
   margin:0.5em auto;
 }
@@ -151,10 +144,10 @@ input:focus{
 .il-card{
   margin:2em auto;
   width:90%;
-  max-width:400px;
+  max-width:500px;
   border:2px solid rgba(255, 255, 255, 0.151);
   border-radius: 1rem;
-  padding:3em 2em;
+  padding:2em 2em;
   box-shadow: 2px 2px 1.6px rgba(255, 255, 255, 0.151);
 }
 .il-card form{
@@ -165,7 +158,7 @@ input:focus{
   margin:0 auto;
 }
 .il-card label{
-  width:92%;
+  width:100%;
   font-weight: bold;
   font-size: 1.2rem;
   text-align: right;
@@ -173,18 +166,22 @@ input:focus{
 }
 .periods{
   display:flex;
-  width:90%;
+  width:100%;
   justify-content: space-between;
   margin:0 auto;
 }
 .periods p{
   background-color: #FFFFFF66;
   padding:0.2em 1.5em;
+  margin:0.5em 0.5em 0.5em 0;
   border-radius: 0.2em;
   font-size:1.2rem;
 }
+.periods:last-child{
+  margin:0.5em 0;
+}
 .impermanent-loss{
-  width:90%;
+  width:100%;
   margin:2em auto;
   text-align: right;
   font-weight:bold;
@@ -220,4 +217,25 @@ a:hover{
 .loading{
   text-align:center;
   color:rgba(255,255,255,0.2);
+}
+@media (min-width:650px){
+  h1{
+    display:block;
+  }
+  .header{
+    display:flex;
+    flex-direction: row;
+    width:90%;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .menu li {
+    margin-right: 0;
+    margin-left: 1em;
+  }
+  .searchHome{
+    width:40%;
+    margin:1em 0em 1em 60%;
+  }
+  
 }
