--- a/src/App.css
+++ b/src/App.css
@@ -149,9 +149,12 @@ input:focus{
 }
 /*Impermanent loss card*/
 .il-card{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
   margin:3em auto;
   width:90%;
-  max-width:420px;
+  max-width:480px;
   border:2px solid rgba(255, 255, 255, 0.151);
   border-radius: 1rem;
   padding:1em 1em;
@@ -192,21 +195,25 @@ input:focus{
 }
 .resultsContainer{
   width:100%;
-  margin:2em 0 2em 25%;
-  text-align: center;
+  padding:1em;
+  margin:2em auto;
+  background-color: rgba(255, 255, 255, 0.05);
   font-weight:bold;
   font-size:1.1rem;
+  border-radius: 0.3em;
+  border-collapse: collapse;
 }
 .resultCategory{
-  padding:0.15em 0.3em;
-  margin-right:0.3em;
+  width:50%;
+  padding:0.5em 1em;
   text-align: left;
-  color:rgba(255,255,255,0.6);
+  color:rgba(255,255,255,0.7);
 }
 .result{
-  padding:0.5em;
+  width:50%;
+  padding:0.5em 1em;
   text-align: right;
-  color:rgba(255,255,255,0.9);
+  color:rgba(255,255,255,0.95);
 }
 .periods p:hover{
   cursor: pointer;
